--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -69,6 +69,11 @@
       <% if (!index && theme.share_jia){ %>
         <%- partial('post/share') %>
       <% } %>
+      <% if (!index){ %>
+        <div id="busuanzi_container_page_pv" style="display:none;">
+          本文阅读 <span id="busuanzi_value_page_pv"></span> 次
+        </div>
+      <% } %>
       <div class="clearfix"></div>
     </div>
   </div>
